# ai-candlestick-trader

./: .gitignore  Dockerfile  README.md  dashboard.py  pyproject.toml  requirements.txt  run_example.bat  run_example.sh  train.py
ai_candlestick_trader/: __init__.py  api.py  cli.py  dataset.py  exceptions.py  preprocess.py
ai_candlestick_trader/dashboard/: __init__.py  app.py  charts.py
ai_candlestick_trader/data/: __init__.py  dataset.py  downloader.py  features.py  patterns.py
ai_candlestick_trader/evaluation/: __init__.py  backtester.py  metrics.py
ai_candlestick_trader/models/: __init__.py  ensemble.py  lstm_model.py  transformer_model.py
ai_candlestick_trader/training/: __init__.py  callbacks.py  hyperopt.py  trainer.py
legacy/: model.py  synthetic_data.py  train_module.py
tests/: test_data.py  test_model.py  test_patterns.py
