[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-candlestick-trader"
version = "2.0.0"
description = "Deep-learning package for candlestick pattern recognition and stock price prediction (EGX / Tadawul)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "AI Candlestick Trader Team" }]
keywords = ["candlestick", "trading", "deep-learning", "stock-market", "EGX", "Tadawul", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "numpy>=1.24",
    "pandas>=2.0",
    "yfinance>=0.2.36",
    "scikit-learn>=1.3",
    "plotly>=5.18",
    "streamlit>=1.30",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "tqdm>=4.66",
    "optuna>=3.5",
    "matplotlib>=3.8",
    "mplfinance>=0.12",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "black>=23.0", "ruff>=0.1", "pytest-cov"]
pdf = ["reportlab>=4.0", "arabic-reshaper>=3.0", "python-bidi>=0.4"]

[project.scripts]
act-train  = "ai_candlestick_trader.cli:train_cli"
act-dash   = "ai_candlestick_trader.cli:dashboard_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_candlestick_trader*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
